# rust-polars-write-to-db

./: .env.example  Cargo.toml  LICENSE  README.md
src/: benchmark.rs  config.rs  dataframe.rs  db.rs  main.rs  utils.rs  writer.rs
